Correction Contrast et liens redondants

--- a/css/style.css
+++ b/css/style.css
@@ -771,16 +771,18 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #7e523b;
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #FFF!important;
+    font-weight: 900;
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
-    color: #FFFFFF!important;
+    background: #FFF;
+    color: #000!important;
+    border: 3px solid #F3976C;
 }
 
 .btn-atomic-tangerine:hover {
